--- a/TileTest/TileTest/TileTest.csproj
+++ b/TileTest/TileTest/TileTest.csproj
@@ -11,6 +11,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BruTile" Version="4.0.0" />
+    <PackageReference Include="Mapsui.Forms" Version="3.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="ShimSkiaSharp" Version="0.5.7.1" />
+    <PackageReference Include="SkiaSharp.Views.Forms" Version="2.80.3" />
+    <PackageReference Include="Svg.Skia" Version="0.5.7.1" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2244" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
   </ItemGroup>
