--- a/VectorTileRenderer/VectorTileRenderer.csproj
+++ b/VectorTileRenderer/VectorTileRenderer.csproj
@@ -35,6 +35,124 @@
 		<PlatformTarget>x64</PlatformTarget>
 	</PropertyGroup>
 	<ItemGroup>
+	  <None Remove="Styles\aliflux-style.json" />
+	  <None Remove="Styles\basic-style.json" />
+	  <None Remove="Styles\bright-style.json" />
+	  <None Remove="Styles\dark-style.json" />
+	  <None Remove="Styles\fonts\Metropolis-Black-Italic.otf" />
+	  <None Remove="Styles\fonts\Metropolis-Black.otf" />
+	  <None Remove="Styles\fonts\Metropolis-Bold-Italic.otf" />
+	  <None Remove="Styles\fonts\Metropolis-Bold.otf" />
+	  <None Remove="Styles\fonts\Metropolis-Extra-Bold-Italic.otf" />
+	  <None Remove="Styles\fonts\Metropolis-Extra-Bold.otf" />
+	  <None Remove="Styles\fonts\Metropolis-Extra-Light-Italic.otf" />
+	  <None Remove="Styles\fonts\Metropolis-Extra-Light.otf" />
+	  <None Remove="Styles\fonts\Metropolis-Light-Italic.otf" />
+	  <None Remove="Styles\fonts\Metropolis-Light.otf" />
+	  <None Remove="Styles\fonts\Metropolis-Medium-Italic.otf" />
+	  <None Remove="Styles\fonts\Metropolis-Medium.otf" />
+	  <None Remove="Styles\fonts\Metropolis-Regular-Italic.otf" />
+	  <None Remove="Styles\fonts\Metropolis-Regular.otf" />
+	  <None Remove="Styles\fonts\Metropolis-Semi-Bold-Italic.otf" />
+	  <None Remove="Styles\fonts\Metropolis-Semi-Bold.otf" />
+	  <None Remove="Styles\fonts\Metropolis-Thin-Italic.otf" />
+	  <None Remove="Styles\fonts\Metropolis-Thin.otf" />
+	  <None Remove="Styles\fonts\Noto-Sans-Bold-Italic.ttf" />
+	  <None Remove="Styles\fonts\Noto-Sans-Bold.ttf" />
+	  <None Remove="Styles\fonts\Noto-Sans-Italic.ttf" />
+	  <None Remove="Styles\fonts\Noto-Sans-Regular.ttf" />
+	  <None Remove="Styles\fonts\NotoSans-Bold-Italic.ttf" />
+	  <None Remove="Styles\fonts\NotoSans-Bold.ttf" />
+	  <None Remove="Styles\fonts\NotoSans-Italic.ttf" />
+	  <None Remove="Styles\fonts\NotoSans-Regular.ttf" />
+	  <None Remove="Styles\fonts\OpenSans-Bold-Italic.ttf" />
+	  <None Remove="Styles\fonts\OpenSans-Bold.ttf" />
+	  <None Remove="Styles\fonts\OpenSans-Extra-Bold-Italic.ttf" />
+	  <None Remove="Styles\fonts\OpenSans-Extra-Bold.ttf" />
+	  <None Remove="Styles\fonts\OpenSans-Italic.ttf" />
+	  <None Remove="Styles\fonts\OpenSans-Light-Italic.ttf" />
+	  <None Remove="Styles\fonts\OpenSans-Light.ttf" />
+	  <None Remove="Styles\fonts\OpenSans-Regular.ttf" />
+	  <None Remove="Styles\fonts\OpenSans-Semi-Bold-Italic.ttf" />
+	  <None Remove="Styles\fonts\OpenSans-Semi-Bold.ttf" />
+	  <None Remove="Styles\fonts\Roboto-Black-Italic.ttf" />
+	  <None Remove="Styles\fonts\Roboto-Black.ttf" />
+	  <None Remove="Styles\fonts\Roboto-Bold-Italic.ttf" />
+	  <None Remove="Styles\fonts\Roboto-Bold.ttf" />
+	  <None Remove="Styles\fonts\Roboto-Italic.ttf" />
+	  <None Remove="Styles\fonts\Roboto-Light-Italic.ttf" />
+	  <None Remove="Styles\fonts\Roboto-Light.ttf" />
+	  <None Remove="Styles\fonts\Roboto-Medium-Italic.ttf" />
+	  <None Remove="Styles\fonts\Roboto-Medium.ttf" />
+	  <None Remove="Styles\fonts\Roboto-Regular.ttf" />
+	  <None Remove="Styles\fonts\Roboto-Thin-Italic.ttf" />
+	  <None Remove="Styles\fonts\Roboto-Thin.ttf" />
+	  <None Remove="Styles\hybrid-style.json" />
+	  <None Remove="Styles\liberty-style.json" />
+	  <None Remove="Styles\light-style.json" />
+	  <None Remove="Styles\runner-style.json" />
+	  <None Remove="Styles\streets-style.json" />
+	</ItemGroup>
+	<ItemGroup>
+	  <EmbeddedResource Include="Styles\aliflux-style.json" />
+	  <EmbeddedResource Include="Styles\basic-style.json" />
+	  <EmbeddedResource Include="Styles\bright-style.json" />
+	  <EmbeddedResource Include="Styles\dark-style.json" />
+	  <EmbeddedResource Include="Styles\fonts\Metropolis-Black-Italic.otf" />
+	  <EmbeddedResource Include="Styles\fonts\Metropolis-Black.otf" />
+	  <EmbeddedResource Include="Styles\fonts\Metropolis-Bold-Italic.otf" />
+	  <EmbeddedResource Include="Styles\fonts\Metropolis-Bold.otf" />
+	  <EmbeddedResource Include="Styles\fonts\Metropolis-Extra-Bold-Italic.otf" />
+	  <EmbeddedResource Include="Styles\fonts\Metropolis-Extra-Bold.otf" />
+	  <EmbeddedResource Include="Styles\fonts\Metropolis-Extra-Light-Italic.otf" />
+	  <EmbeddedResource Include="Styles\fonts\Metropolis-Extra-Light.otf" />
+	  <EmbeddedResource Include="Styles\fonts\Metropolis-Light-Italic.otf" />
+	  <EmbeddedResource Include="Styles\fonts\Metropolis-Light.otf" />
+	  <EmbeddedResource Include="Styles\fonts\Metropolis-Medium-Italic.otf" />
+	  <EmbeddedResource Include="Styles\fonts\Metropolis-Medium.otf" />
+	  <EmbeddedResource Include="Styles\fonts\Metropolis-Regular-Italic.otf" />
+	  <EmbeddedResource Include="Styles\fonts\Metropolis-Regular.otf" />
+	  <EmbeddedResource Include="Styles\fonts\Metropolis-Semi-Bold-Italic.otf" />
+	  <EmbeddedResource Include="Styles\fonts\Metropolis-Semi-Bold.otf" />
+	  <EmbeddedResource Include="Styles\fonts\Metropolis-Thin-Italic.otf" />
+	  <EmbeddedResource Include="Styles\fonts\Metropolis-Thin.otf" />
+	  <EmbeddedResource Include="Styles\fonts\Noto-Sans-Bold-Italic.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\Noto-Sans-Bold.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\Noto-Sans-Italic.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\Noto-Sans-Regular.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\NotoSans-Bold-Italic.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\NotoSans-Bold.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\NotoSans-Italic.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\NotoSans-Regular.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\OpenSans-Bold-Italic.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\OpenSans-Bold.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\OpenSans-Extra-Bold-Italic.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\OpenSans-Extra-Bold.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\OpenSans-Italic.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\OpenSans-Light-Italic.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\OpenSans-Light.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\OpenSans-Regular.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\OpenSans-Semi-Bold-Italic.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\OpenSans-Semi-Bold.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\Roboto-Black-Italic.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\Roboto-Black.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\Roboto-Bold-Italic.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\Roboto-Bold.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\Roboto-Italic.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\Roboto-Light-Italic.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\Roboto-Light.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\Roboto-Medium-Italic.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\Roboto-Medium.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\Roboto-Regular.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\Roboto-Thin-Italic.ttf" />
+	  <EmbeddedResource Include="Styles\fonts\Roboto-Thin.ttf" />
+	  <EmbeddedResource Include="Styles\hybrid-style.json" />
+	  <EmbeddedResource Include="Styles\liberty-style.json" />
+	  <EmbeddedResource Include="Styles\light-style.json" />
+	  <EmbeddedResource Include="Styles\runner-style.json" />
+	  <EmbeddedResource Include="Styles\streets-style.json" />
+	</ItemGroup>
+	<ItemGroup>
 		<None Include="app.config" />
 	</ItemGroup>
 	<ItemGroup>
@@ -55,5 +173,55 @@
 	  <ProjectReference Include="..\Mapbox.VectorTiles\Geometry\Geometry.csproj" />
 	  <ProjectReference Include="..\Mapbox.VectorTiles\PbfReader\PbfReader.csproj" />
 	  <ProjectReference Include="..\Mapbox.VectorTiles\VectorTileReader\VectorTileReader.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Resource Include="Styles\fonts\Metropolis-Black-Italic.otf" />
+	  <Resource Include="Styles\fonts\Metropolis-Black.otf" />
+	  <Resource Include="Styles\fonts\Metropolis-Bold-Italic.otf" />
+	  <Resource Include="Styles\fonts\Metropolis-Bold.otf" />
+	  <Resource Include="Styles\fonts\Metropolis-Extra-Bold-Italic.otf" />
+	  <Resource Include="Styles\fonts\Metropolis-Extra-Bold.otf" />
+	  <Resource Include="Styles\fonts\Metropolis-Extra-Light-Italic.otf" />
+	  <Resource Include="Styles\fonts\Metropolis-Extra-Light.otf" />
+	  <Resource Include="Styles\fonts\Metropolis-Light-Italic.otf" />
+	  <Resource Include="Styles\fonts\Metropolis-Light.otf" />
+	  <Resource Include="Styles\fonts\Metropolis-Medium-Italic.otf" />
+	  <Resource Include="Styles\fonts\Metropolis-Medium.otf" />
+	  <Resource Include="Styles\fonts\Metropolis-Regular-Italic.otf" />
+	  <Resource Include="Styles\fonts\Metropolis-Regular.otf" />
+	  <Resource Include="Styles\fonts\Metropolis-Semi-Bold-Italic.otf" />
+	  <Resource Include="Styles\fonts\Metropolis-Semi-Bold.otf" />
+	  <Resource Include="Styles\fonts\Metropolis-Thin-Italic.otf" />
+	  <Resource Include="Styles\fonts\Metropolis-Thin.otf" />
+	  <Resource Include="Styles\fonts\Noto-Sans-Bold-Italic.ttf" />
+	  <Resource Include="Styles\fonts\Noto-Sans-Bold.ttf" />
+	  <Resource Include="Styles\fonts\Noto-Sans-Italic.ttf" />
+	  <Resource Include="Styles\fonts\Noto-Sans-Regular.ttf" />
+	  <Resource Include="Styles\fonts\NotoSans-Bold-Italic.ttf" />
+	  <Resource Include="Styles\fonts\NotoSans-Bold.ttf" />
+	  <Resource Include="Styles\fonts\NotoSans-Italic.ttf" />
+	  <Resource Include="Styles\fonts\NotoSans-Regular.ttf" />
+	  <Resource Include="Styles\fonts\OpenSans-Bold-Italic.ttf" />
+	  <Resource Include="Styles\fonts\OpenSans-Bold.ttf" />
+	  <Resource Include="Styles\fonts\OpenSans-Extra-Bold-Italic.ttf" />
+	  <Resource Include="Styles\fonts\OpenSans-Extra-Bold.ttf" />
+	  <Resource Include="Styles\fonts\OpenSans-Italic.ttf" />
+	  <Resource Include="Styles\fonts\OpenSans-Light-Italic.ttf" />
+	  <Resource Include="Styles\fonts\OpenSans-Light.ttf" />
+	  <Resource Include="Styles\fonts\OpenSans-Regular.ttf" />
+	  <Resource Include="Styles\fonts\OpenSans-Semi-Bold-Italic.ttf" />
+	  <Resource Include="Styles\fonts\OpenSans-Semi-Bold.ttf" />
+	  <Resource Include="Styles\fonts\Roboto-Black-Italic.ttf" />
+	  <Resource Include="Styles\fonts\Roboto-Black.ttf" />
+	  <Resource Include="Styles\fonts\Roboto-Bold-Italic.ttf" />
+	  <Resource Include="Styles\fonts\Roboto-Bold.ttf" />
+	  <Resource Include="Styles\fonts\Roboto-Italic.ttf" />
+	  <Resource Include="Styles\fonts\Roboto-Light-Italic.ttf" />
+	  <Resource Include="Styles\fonts\Roboto-Light.ttf" />
+	  <Resource Include="Styles\fonts\Roboto-Medium-Italic.ttf" />
+	  <Resource Include="Styles\fonts\Roboto-Medium.ttf" />
+	  <Resource Include="Styles\fonts\Roboto-Regular.ttf" />
+	  <Resource Include="Styles\fonts\Roboto-Thin-Italic.ttf" />
+	  <Resource Include="Styles\fonts\Roboto-Thin.ttf" />
 	</ItemGroup>
 </Project>
