--- a/VectorTileRenderer/AliFlux.VectorTileRenderer.csproj
+++ b/VectorTileRenderer/AliFlux.VectorTileRenderer.csproj
@@ -123,6 +123,7 @@
 	  <EmbeddedResource Include="Styles\streets-style.json" />
 	</ItemGroup>
 	<ItemGroup>
+		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
 		<PackageReference Include="Newtonsoft.Json">
 			<Version>13.0.1</Version>
 		</PackageReference>
